--- a/article.html
+++ b/article.html
@@ -101,7 +101,7 @@
               consectetur minima iste nostrum earum?
             </p>
           </article>
-          <aside class="card bg-secondary">
+          <aside class="card bg-secondary px-2">
             <h2>Join Us</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
